# bbuhot

./: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE  bbuhot.bazelproject  build.gradle  package.json  settings.gradle
bbuh_sql/: fresh_start.sql
bbuhot_client/: .gitignore  README.md  angular.json  build.gradle  package-lock.json  package.json  tsconfig.json  tslint.json
bbuhot_client/src/: index.html  proxy.conf.js  styles.scss  test.ts  tslint.json
bbuhot_client/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
bbuhot_client/src/app/api/: api-methods.ts  api-service.ts  api.module.ts  user-info-helper.ts
bbuhot_client/src/app/auth/: auth-error.ts  auth.guard.spec.ts  auth.guard.ts  auth.module.ts  auth.service.ts
bbuhot_client/src/app/bbuhot-api/: api-service.ts
bbuhot_client/src/app/bbuhot-card/: bbuhot-card.component.css  bbuhot-card.component.html  bbuhot-card.component.spec.ts  bbuhot-card.component.ts
bbuhot_client/src/app/bbuhot-footer-bar/: bbuhot-footer-bar.component.css  bbuhot-footer-bar.component.html  bbuhot-footer-bar.component.spec.ts  bbuhot-footer-bar.component.ts
bbuhot_client/src/app/bet-page/: bet-page.module.ts  bet-routing.module.ts  game-list-service.ts
bbuhot_client/src/app/bookmaker/: bookmaker-routing.module.ts  bookmaker.module.ts
bbuhot_client/src/app/competition/: competition.component.css  competition.component.html  competition.component.spec.ts  competition.component.ts  competition.module.ts
bbuhot_client/src/app/competition-card/: competition-card.component.css  competition-card.component.html  competition-card.component.spec.ts  competition-card.component.ts
bbuhot_client/src/app/competition-detail/: competition-detail.component.css  competition-detail.component.html  competition-detail.component.spec.ts  competition-detail.component.ts
bbuhot_client/src/app/competition-player/: competition-player.component.css  competition-player.component.html  competition-player.component.spec.ts  competition-player.component.ts
bbuhot_client/src/app/components/: components.module.ts
bbuhot_client/src/app/data-store/: data-source.service.spec.ts  data-source.service.ts  data-store-errors.ts  data-store.module.ts  data-store.service.ts  http-error.interceptor.ts
bbuhot_client/src/app/facade/: facade.module.ts
bbuhot_client/src/app/homepage/: homepage.component.css  homepage.component.html  homepage.component.ts  homepage.module.ts
bbuhot_client/src/app/leader-board/: leader-board.component.html  leader-board.component.spec.ts  leader-board.component.ts  leader-board.module.ts
bbuhot_client/src/app/models/: models.module.ts
bbuhot_client/src/app/navigation-bar/: navigation-bar.component.css  navigation-bar.component.html  navigation-bar.component.ts
bbuhot_client/src/app/routing/: routing.component.css  routing.component.html  routing.component.spec.ts  routing.component.ts  routing.module.ts
bbuhot_client/src/app/spinach-items/: spinach-items.component.css  spinach-items.component.html  spinach-items.component.spec.ts  spinach-items.component.ts
bbuhot_client/src/app/warehouse/: warehouse.module.ts
bbuhot_client/src/app/wayne/: wayne.component.html  wayne.component.spec.ts  (+2 more)
bbuhot_client/src/models/: Quiz.ts  Team.ts  TeamRatio.ts  index.ts
bbuhot_custom_error_prone/: build.gradle
bbuhot_protobuf/: build.gradle
bbuhot_server/: Dockerfile  How to start the docker.md  build.gradle  configuration.default.json  how_to_use_docker.md
client/: package-lock.json  package.json
client/e2e/src/: app.e2e-spec.ts
client/src/app/: app.component.spec.ts  app.component.ts
docs/: Testing-against-public-api.md
docs/dev/: deploy-backend.md  developing-environent.md  developing-flow.md
java/com/bbuhot/server/app/: AppComponent.java  BUILD.bazel  EntryPoint.java  package-info.java
java/com/bbuhot/server/config/: BUILD.bazel  Flags.java  package-info.java
java/com/bbuhot/server/domain/: Authority.java  AuthorityUtil.java  BUILD.bazel  BettingOnGame.java  GameStatusChanging.java  package-info.java
java/com/bbuhot/server/entity/: BUILD.bazel  BetEntity.java  EntityModule.java  ExtcreditsEntity.java  GameEntity.java  UserEntity.java  package-info.java
java/com/bbuhot/server/flyway/: BUILD.bazel  DatabaseController.java  README.md
java/com/bbuhot/server/flyway/db/: V1_1546697442__change_bet_table_column_name.sql  package-info.java
java/com/bbuhot/server/persistence/: BUILD.bazel  BetQueries.java  ExtcreditsQueries.java  GameQueries.java  HibernateFactory.java  PersistenceModule.java  PhysicalNamingStrategyImpl.java  UserQueries.java  package-info.java
java/com/bbuhot/server/service/: AbstractProtobufService.java  AdminGameStatusChangeService.java  AdminGameUpdatingService.java  AuthorityProtobufService.java  BUILD.bazel  BetUpdatingService.java  FallbackService.java  HttpServerExchangeMessageWrapper.java  ListGameService.java  ServiceModule.java  UndertowHttpHandler.java  UserProtobufService.java
javatests/com/bbuhot/server/domain/: AuthorityUtilTest.java  BUILD.bazel
javatests/com/bbuhot/server/persistence/: BUILD.bazel  TestPersistenceModule.java
javatests/com/bbuhot/server/service/: AdminGameServicesTest.java  BUILD.bazel  BetUpdatingServiceTest.java  GameListingServiceTest.java  TestServiceComponent.java
javatests/com/bbuhot/server/service/res/: admin_list_cancelled_game_request.json  bet_above_highest_request.json  bet_below_lowest_request.json  bet_over_capacity_reply.json  change_bets_request.json  create_game_request.json  publish_game_reply.json  settle_game_reply.json  settle_game_request.json  update_game_reply.json  user_list_cancelled_game_request.json  user_list_published_game_reply.json
proto/bbuhot/config/: BUILD  configuration.proto
proto/bbuhot/service/: BUILD.bazel  auth.proto  game.proto
server/bbuh_sql/: fresh_start.sql
server/bbuhot_legency/php_docker_build/: Dockerfile
server/bbuhot_protobuf/: build.gradle
server/gradle/wrapper/: gradle-wrapper.properties
(+211 files in other folders)
