package(default_visibility = ["//java/com/bbuhot/server:server_group"])

java_library(
    name = "app",
    srcs = glob(["*.java"]),
    deps = [
        "//java/com/bbuhot/errorprone:annotation",
        "//java/com/bbuhot/server/config",
        "//java/com/bbuhot/server/entity",
        "//java/com/bbuhot/server/flyway",
        "//java/com/bbuhot/server/persistence",
        "//java/com/bbuhot/server/service",
        "//third_party/java/dagger",
        "@maven//:com_google_errorprone_error_prone_core",
        "@maven//:io_undertow_undertow_core",
    ],
)
