load("//third_party/java/junit4:junit4.bzl", "junit4_test")

filegroup(
    name = "res",
    srcs = glob(["res/*.json"]),
)

junit4_test(
    name = "service",
    srcs = [
        "TestServiceComponent.java",
    ],
    resources = [
        "configuration_for_test.json",
        ":res",
    ],
    test_srcs = glob(["*Test.java"]),
    deps = [
        "//java/com/bbuhot/server/config",
        "//java/com/bbuhot/server/domain",
        "//java/com/bbuhot/server/entity",
        "//java/com/bbuhot/server/persistence",
        "//java/com/bbuhot/server/service",
        "//javatests/com/bbuhot/server/persistence:test_peristence_module",
        "//javatests/com/bbuhot/server/util",
        "//proto/bbuhot/config:config_java_proto",
        "//proto/bbuhot/service:service_java_proto",
        "//third_party/java/dagger",
        "@maven//:junit_junit",
        "@maven//:org_hibernate_javax_persistence_hibernate_jpa_2_1_api",
    ],
)
